--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
